# Slicer-TrackerStabilizer

./: CMakeLists.txt  README.md
TrackerStabilizer/: CMakeLists.txt  qSlicerTrackerStabilizerModule.cxx  qSlicerTrackerStabilizerModule.h  qSlicerTrackerStabilizerModuleWidget.cxx  qSlicerTrackerStabilizerModuleWidget.h
TrackerStabilizer/Logic/: vtkSlicerTrackerStabilizerLogic.cxx  vtkSlicerTrackerStabilizerLogic.h
TrackerStabilizer/MRML/: vtkMRMLTrackerStabilizerNode.cxx  vtkMRMLTrackerStabilizerNode.h
TrackerStabilizer/Resources/UI/: qSlicerTrackerStabilizerModuleWidget.ui
